feat: support password protected zip file upload
